--- a/popupFolder/popup.css
+++ b/popupFolder/popup.css
@@ -1,5 +1,5 @@
 body {
-    height: 400px;
+    max-height: 20px;
     width: 350px;
     background-color: rgb(32, 122, 173);
   }
@@ -42,24 +42,26 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    max-height: 100px;
   }
   
   .taskInput {
     outline: none;
     border: none;
-    border-radius: 4px;
+    border-radius: 6px;
     margin: 5px;
     padding: 5px 10px 5px 10px;
     width: 250px;
   }
   
   .taskDelete {
+    background-color: rgb(180, 240, 240);
     outline: none;
     border: none;
     height: 25px;
     width: 25px;
     border-radius: 4px;
-    color: indianred;
+    color: rgb(226, 14, 14);
     cursor: pointer;
     font-weight: 700;
   }
